k8s/orders-deploy.yaml
apiVersion: apps/v1
kind : Deployment
metadata:
  name: orders-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: adi2911/orders-service
          env:
            - name: NATS_URL
              value: 'http://nats-service:4222'
            - name: NATS_CLUSTER_ID
              value: 'bookmyevent'
            - name: NATS_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: MONGO_URI
              value: 'mongodb://orders-mongo-service:27017/orders'
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
