k8s/ticket-deploy.yaml
apiVersion: apps/v1
kind : Deployment
metadata:
  name: ticket-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: adi2911/ticket-service
          env:
            - name: MONGO_URI
              value: 'mongodb://ticket-mongo-service:27017/ticket'
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  selector:
    app: ticket
  ports:
    - name: ticket
      protocol: TCP
      port: 3000
      targetPort: 3000
